se creo la conexion del servicio limites al spring cloud config server

--- a/spring-cloud-config-service/src/main/resources/application.properties
+++ b/spring-cloud-config-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8888
+spring.application.name=spring-cloud-config-server
+spring.cloud.config.server.git.uri=https://github.com/FedeVB/microservices.git
+spring.cloud.config.server.git.search-paths=git-localconfig-repo
