--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -10,3 +10,5 @@ logging.level.org.hibernate.SQL=debug
 
 #//PROPERTIES para autogenerar base de datos
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
