--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,5 +3,7 @@ server.port=8765
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-eureka.instance.prefer-ip-address=false
+#eureka.instance.prefer-ip-address=true
 spring.cloud.gateway.discovery.locator.enabled=true
+
+eureka.instance.hostname=localhost
