--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -12,4 +12,4 @@ logging.level.org.hibernate.SQL=debug
 spring.jpa.hibernate.ddl-auto=update
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.instance.hostname=localhost:8765
+eureka.instance.hostname=localhost
